# backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml  init.sql  postgresql.conf
migrations/1_create_clientes/: down.sql  up.sql
migrations/2024-03-17-040746_init_db/: down.sql  up.sql
migrations/2_insert_clientes/: down.sql  up.sql
migrations/3_create_transacoes/: down.sql  up.sql
sql/: add_transacao.sql  get_all_clientes.sql  get_cliente.sql  get_cliente_saldo.sql  get_transacoes.sql  make_transaction_c.sql  make_transaction_d.sql  update_cliente.sql
src/: db.rs  errors.rs  handlers.rs  main.rs  models.rs  schema.rs
