[package]
name = "backend"
version = "1.0.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true

[dev-dependencies]
env_logger = "0.11.3"

[dependencies]
actix-web = "4.5.1"
bb8 = "0.8.3"
chrono = "0.4.35"
derive_more = "0.99.17"
diesel = { version = "2.1.5", features = ["postgres"] }
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
serde = { version = "1.0.197", features = ["derive"] }
